# Redeem-Catan

./: .gitignore  1004_results.txt  LICENSE  ReadME.md  div_types.txt  game_logs.txt  todo.md
_Ideas/: 48h_sprint_plan.md  axelrod_explanation.md  eval_log_generation_details.md  implementations.txt  interpreting_ppo_metrics.md  limitations.md  mode_comparison.md  parsing_guide.md  qa_supervisor_defense.md  rl_pipeline_deepdive.md  rl_ppo_crash_course.md  stats_idea.txt  todo.md
data/player_profiles/: parsed_eval_logs_profiles.parquet  player_profiles.parquet  player_profiles_ml_ready.parquet
past_work/: github.txt
scripts/: eval_pipeline.sh  play_gui.sh
src/: pyproject.toml
src/analysis/: cluster_bots.ipynb  hypothesis_test.ipynb  parse_logs.ipynb  parse_logs.py  system_diagram.tex
src/eda/: data_pipeliner.ipynb  eda.ipynb  player_profiler.ipynb  pyproject.toml
src/results/: 0502_103417_aware_axelrod_013.csv
src/rl/: axelrod.py  eval.py  make_env.py  profiles.py  test_env.py  test_eval.py  train.py  visualizations.ipynb
src/rl/results/: 0405_153624_baseline.csv  0405_160139_baseline.csv  0405_180128_baseline_013.csv  0405_180227_baseline_013.csv  0409_235920_baseline_012.csv  0410_114503_baseline_013.csv  0410_122109_aware_012.csv  0410_184527_baseline_012.csv  0410_184612_shuffled_all.csv  0410_185416_aware_all.csv  0410_190540_aware_012.csv  0410_201226_aware_013.csv
src/scraper/: boilerplate_scraper.js
