[project]
name = "Aatmiya-FYP"
version = "0.1.0"
description = "Traditional Catan Bots, but smarter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "catanatron-gym>=4.0.0",
    "gymnasium>=0.29.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "sb3-contrib>=2.8.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.8.0",
    "tqdm>=4.67.3",
]
